# mc-mini

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE  README.md  config.json  makefile
include/mc_mini/: ace_loader.hpp  config.hpp  geometry.hpp  material.hpp  particle.hpp  rng.hpp  scattering.hpp  tally.hpp  timer.hpp  xs_table.hpp
include/mc_mini/event/: particle_buffer.hpp
include/mc_mini/history/: transport.hpp
src/cuda/: main.cu
src/event/: main.cpp
src/history/: main.cpp  main_mt.cpp
